--- a/demos/modal.html
+++ b/demos/modal.html
@@ -49,105 +49,57 @@
             </div>
         </header>
         <h1 class="header">
-            Available Plans
+            Modal Fun
         </h1>
         <div class="container">
-            <h2>Free Tools</h2>
-            <p class="text-large">Be the expert for your customers, and get the information you need, when you need it.</p>
+            <ul class="breadcrumb">
+                <li class="breadcrumb-item">
+                    <a href="#">Home</a>
+                </li>
+                <li class="breadcrumb-item">
+                    <a href="#">Kinda Cool Stuff</a>
+                </li>
+                <li class="breadcrumb-item">
+                    <a href="#">Modals</a>
+                </li>
+            </ul>
 
-            <div class="columns">
-                <div class="column col-4">
-                    <div class="card">
-                        <div class="card-body">
-                            <div class="card-title">
-                                <div class="float-right">
-                                    <div class="h5">$299.99</div>
-                                    <div class="text-small">per month</div>
-                                </div>
-                                <h2>Standard</h2>
-                            </div>
-                            <p>Turn your website into your showroom &amp; capture leads.</p>
-                            <button class="btn btn-lg btn-primary btn-block">Upgrade</button>
-                            <button class="btn btn-lg btn-link btn-block">Contact Sales</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="column col-4">
-                    <div class="card">
-                        <div class="card-body">
-                            <div class="card-title">
-                                <div class="float-right">
-                                    <div class="h5">$449.99</div>
-                                    <div class="text-small">per month</div>
-                                </div>
-                                <h2>Pro</h2>
-                            </div>
-                            <p>Turn your website into your showroom &amp; capture leads.</p>
-                            <button class="btn btn-lg btn-primary btn-block">Upgrade</button>
-                            <button class="btn btn-lg btn-link btn-block">Contact Sales</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="column col-4">
-                    <div class="card">
-                        <div class="card-body">
-                            <div class="card-title">
-                                <h2>Enterprise</h2>
-                            </div>
-                            <p>Unlock the full pwoer of RideStyler with our API.</p>
-                            <button class="btn btn-lg btn-primary btn-block">Contact Sales</button>
-                            <button class="btn btn-lg btn-link btn-block">Learn More</button>
-                        </div>
-                    </div>
+            <div class="hero bg-gray text-center">
+                <div class="hero-body">
+                    <a class="btn btn-lg btn-primary" href="#modal">Open One</a>
                 </div>
             </div>
         </div>
-        <div class="container">
-            <div class="toast toast-secondary">
-                <a class="float-right" href="#">Subscribe</a>
-                Stay in the loop on product updates, subscribe to our blog
+        <div class="modal" id="modal">
+            <a href="#close" class="modal-overlay" aria-label="Close"></a>
+            <div class="modal-container">
+                <div class="modal-header h3">
+                    <a href="#close" class="btn btn-clear float-right" aria-label="Close"></a>
+                    Modal Title
+                </div>
+                <div class="modal-body">
+                    <p>You've gotta pick one of these, you just have to:</p>
+                    <form>
+                        <div class="form-group">
+                            <label class="form-radio">
+                                <input type="radio" name="gender" checked>
+                                <i class="form-icon"></i> Hamburgers 🐄
+                            </label>
+                            <label class="form-radio">
+                                <input type="radio" name="gender">
+                                <i class="form-icon"></i> Pizza 🍕
+                            </label>
+                            <label class="form-radio">
+                                <input type="radio" name="gender">
+                                <i class="form-icon"></i> Chinese 🍜
+                            </label>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer text-right">
+                    <a class="btn btn-primary" href="#">Bring it to me</a>
+                </div>
             </div>
         </div>
-        <footer>
-            <div class="columns">
-                <div class="column col-3">
-                    <ul>
-                        <h5>About</h5>
-                        <li><a href="#">Server status</a></li>
-                        <li><a href="#">News</a></li>
-                        <li><a href="#">History</a></li>
-                        <li><a href="#">Privacy poliscy</a></li>
-                        <li><a href="#">Terms of use</a></li>
-                        <li><a href="#">Team</a></li>
-                    </ul>
-                </div>
-                <div class="column col-3">
-                    <ul>
-                        <h5>Mobile</h5>
-                        <li><a href="#">iPhone</a></li>
-                        <li><a href="#">Google</a></li>
-                        <li><a href="#">Amazon</a></li>
-                    </ul>
-                </div>
-                <div class="column col-3">
-                    <ul>
-                        <h5>Help</h5>
-                        <li><a href="#">How it works</a></li>
-                        <li><a href="#">Tutorial</a></li>
-                        <li><a href="#">FAQ</a></li>
-                        <li><a href="#">Command reference</a></li>
-                        <li><a href="#">API reference</a></li>
-                    </ul>
-                </div>
-                <div class="column col-3">
-                    <ul>
-                        <h5>Making money</h5>
-                        <li><a href="#">Affiliate program</a></li>
-                        <li><a href="#">Getting started</a></li>
-                        <li><a href="#">Approval process</a></li>
-                    </ul>
-                </div>
-            </div>
-        </footer>
     </body>
 </html>
